# weather3

./: .gitignore  Cargo.toml  README.md
src/: main.rs
