[package]
name = "weather3"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
plotters = "0.3.7"
sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql", "macros", "tls-native-tls" ] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
dataviz = "0.1.7"
rand = "0.9.2"